tests/ext/invalid/SetElemOf_Invalid_1.whiley
import whiley.lang.*:*

void f(int x):
    assert x in {1,2,3}
